Fix to file-display overflow-y

--- a/src/components/media.scss
+++ b/src/components/media.scss
@@ -230,7 +230,7 @@ body.import {
 	width: calc(100% - 20px);
 	max-width: calc(100% - 20px);
 	height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	margin-top: 10px;
 
 	.file-info {
